<resources>
    <string name="app_name">Perc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item">Меню</string>
    <string name="sale_item">Акции</string>
    <string name="delivery_item">Доставка</string>
    <string name="basket_item">Корзина</string>
    <string name="phone_item">Контакты</string>
    <string name="bellini_group">Bellini group</string>
    <string name="cat">Пицца</string>
    <string name="cat1">Паста</string>
    <string name="cat2">Равиоли</string>
    <string name="cat3">Лазанья</string>
    <string name="cat4">Салаты</string>
    <string name="cat5">Десерты</string>
    <string name="act1">Лови момент</string>
    <string name="act2">Юбилейный заказ</string>
    <string name="act3">Попробуй набор «Пир»!</string>
    <string name="act4">Любимое блюдо с собой!</string>
    <string name="act1_1">ДО 31 ДЕКАБРЯ</string>
    <string name="act2_1">Попробуй набор «Пир»!</string>
    <string name="act3_1">Юбилейный заказ</string>
    <string name="act4_1">Любимое блюдо с собой!</string>
    <string name="frag_rest">Все рестораны</string>
    <string name="rest">Перцы</string>
    <string name="rest1">Перцы</string>
    <string name="rest2">Перцы</string>
    <string name="rest3">Перцы</string>
    <string name="menu">Пицца Портобелло</string>
    <string name="menu1">Пицца Кон Карне</string>
    <string name="menu2">Пицца Пепперони</string>
    <string name="menu3">Пица Карбонара</string>
    <string name="menu4">Пицца Цезарь</string>
    <string name="menu5">Пицца Маргарита</string>

</resources>
